--- a/Jobs.html
+++ b/Jobs.html
@@ -235,11 +235,11 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black">
                         <p class="text-uppercase fw-bold">Văn phòng dự án</p>
                         <p class="mb-0">
-                            Địa chỉ: Tầng 4, Tòa nhà xanh Liên hợp quốc,
+                            Địa chỉ: Tầng 4, Tòa nhà Xanh Liên Hợp Quốc,
                             <br />
-                            304 Phố Kim Mã, phường Ngọc Khánh,
+                            304 phố Kim Mã, phường Ngọc Khánh,
                             <br />
-                            Quận Ba Đình, Hà Nội
+                            quận Ba Đình, Hà Nội
                         </p>
                     </div>
                     <!-- Col 2-->
