--- a/index.html
+++ b/index.html
@@ -162,10 +162,6 @@
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Tìm kiếm thông tin</span>
                             </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Đánh giá nguồn nội dung</span>
-                            </div>
                         </div>
                     </div>
                     <a class="mt-4 fw-bold d-flex align-items-center"
@@ -242,10 +238,16 @@
                                 <span class="ml-2 fw-bold">Khóa học được cung cấp và cấp chứng Tập đoàn Microsoft</span>
                             </div>
                             <div class="d-flex mt-1">
-                                <img alt="" src="assets/img/icons/control-check.svg"
-                                    style="width: 25px; padding-bottom: 20px;">
-                                <span class="ml-2">Hướng dẫn sử dụng các ứng dụng tạo và chỉnh sửa tài liệu số
-                                </span>
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <span class="ml-2">Cách tạo văn bản trên Word</span>
+                            </div>
+                            <div class="d-flex mt-3">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <span class="ml-2">Cách làm việc với văn bản PDF</span>
+                            </div>
+                            <div class="d-flex mt-3">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <span class="ml-2">Các ứng dụng trên Office 365</span>
                             </div>
                         </div>
                     </div>
@@ -274,11 +276,7 @@
                             </div>
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Công cụ quản lý thời gian</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Công cụ quản lý công việc</span>
+                                <span class="ml-2">Công cụ quản lý thời gian và công việc</span>
                             </div>
                         </div>
                     </div>
@@ -339,10 +337,6 @@
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Tìm kiếm thông tin và việc làm</span>
                             </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Mạng xã hội, thư điện tử, ngân hàng điện tử</span>
-                            </div>
                         </div>
                     </div>
                     <a class="mt-4 fw-bold d-flex align-items-center"
@@ -372,10 +366,6 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Kẻ xấu trên mạng</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Cùng trẻ an toàn trên mạng </span>
                             </div>
                         </div>
                     </div>
@@ -417,11 +407,15 @@
                             <h5 class="fw-bold title-height">Học tập suốt đời</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
                             <div class="d-flex mt-1">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <span class="ml-2">Lợi ích của việc không ngừng học tập</span>
+                            </div>
+                            <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">4 hình thức học tập</span>
                             </div>
@@ -444,7 +438,7 @@
                             <h5 class="fw-bold title-height">Kỹ năng giao tiếp</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -459,7 +453,7 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg"
                                     style="width: 22px; padding-bottom: 20px;">
-                                <span class="ml-2">Ngôn từ - Giọng nói - Ngôn ngữ cơ thể trong giao tiép</span>
+                                <span class="ml-2">Ngôn từ - Giọng nói - Ngôn ngữ cơ thể trong giao tiếp</span>
                             </div>
                         </div>
                     </div>
@@ -476,7 +470,7 @@
                             <h5 class="fw-bold title-height">Kỹ năng làm việc nhóm</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -506,7 +500,7 @@
                             <h5 class="fw-bold title-height">Tư duy thấu đáo và giải quyết vấn đề</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -517,10 +511,6 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Trình tự giải quyết một vấn đề</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Các cách xử lý xung đột nhóm</span>
                             </div>
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
@@ -564,7 +554,7 @@
                             <h5 class="fw-bold title-height">Định vị bản thân</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -596,17 +586,13 @@
                             <h5 class="fw-bold title-height">Hành trình xin việc</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
                             <div class="d-flex mt-1">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Nguồn tìm việc</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Tìm hiểu về thông tin tuyển dụng</span>
+                                <span class="ml-2">Nguồn tìm việc và thông tin tuyển dụng</span>
                             </div>
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
@@ -615,7 +601,7 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg"
                                     style="width: 25px; padding-bottom: 20px;">
-                                <span class="ml-2">Chinh phục nhà tuyển dụng và cách trả lời phỏng vấn</span>
+                                <span class="ml-2">Cách trả lời phỏng vấn và chinh phục nhà tuyển dụng</span>
                             </div>
                         </div>
                     </div>
@@ -687,7 +673,7 @@
                             <h5 class="fw-bold title-height">Khởi động: Tổng quan về khởi nghiệp</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -698,6 +684,10 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Chiến lược kinh doanh</span>
+                            </div>
+                            <div class="d-flex mt-3">
+                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
+                                <span class="ml-2">Lợi thế cạnh tranh</span>
                             </div>
                         </div>
                     </div>
@@ -715,7 +705,7 @@
                             <h5 class="fw-bold title-height">Vượt chướng ngại vật: Quản lý tài chính</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -747,7 +737,7 @@
                             <h5 class="fw-bold title-height">Tăng tốc: Kỹ năng bán hàng</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -758,10 +748,6 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Cách sắp xếp cửa hàng, sản phẩm</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Cách quảng cáo hiệu quả</span>
                             </div>
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
@@ -782,7 +768,7 @@
                             <h5 class="fw-bold title-height">Về đích: Thông tin chung cho người khởi nghiệp</h5>
                             <div class="d-flex mt-3 mb-2 align-items-center">
                                 <img alt="" src="assets/img/icons/ChungNhan.png" style="width: 20px">
-                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự tài trợ của Chính phủ Vương
+                                <span class="ml-2 fw-bold">Khóa học được xây dựng dưới sự hỗ trợ của Chính phủ Vương
                                     quốc
                                     Anh</span>
                             </div>
@@ -793,10 +779,6 @@
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Thủ tục về thuế và bảo hiểm xã hội</span>
-                            </div>
-                            <div class="d-flex mt-3">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Hướng dẫn tra cứu thông tin</span>
                             </div>
                             <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
@@ -821,10 +803,6 @@
                                     Google.org</span>
                             </div>
                             <div class="d-flex mt-1">
-                                <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
-                                <span class="ml-2">Bán hàng trực tuyến và qua mạng xã hội</span>
-                            </div>
-                            <div class="d-flex mt-3">
                                 <img alt="" src="assets/img/icons/control-check.svg" style="width: 20px">
                                 <span class="ml-2">Tạo nội dung tương tác</span>
                             </div>
@@ -976,11 +954,11 @@
                     <div class="col-lg-4 mb-5 mb-lg-0 text-black">
                         <p class="text-uppercase fw-bold">Văn phòng dự án</p>
                         <p class="mb-0">
-                            Địa chỉ: Tầng 4, Tòa nhà xanh Liên hợp quốc,
+                            Địa chỉ: Tầng 4, Tòa nhà Xanh Liên Hợp Quốc,
                             <br />
-                            304 Phố Kim Mã, phường Ngọc Khánh,
+                            304 phố Kim Mã, phường Ngọc Khánh,
                             <br />
-                            Quận Ba Đình, Hà Nội
+                            quận Ba Đình, Hà Nội
                         </p>
                     </div>
                     <!-- Col 2-->
