--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,20 @@
     </script>
     <!-- back to top Button  -->
     <script src="assets/js/toTop-btn.js"></script>
+    <!-- support widget -->
+    <script>
+        window.fwSettings={
+        'widget_id':51000002240
+        };
+        !function(){if("function"!=typeof window.FreshworksWidget){var n=function(){n.q.push(arguments)};n.q=[],window.FreshworksWidget=n}}() 
+    </script>
+    <script type='text/javascript' src='https://aus-widget.freshworks.com/widgets/51000002240.js' async defer></script>
+    <script type="text/javascript">
+        FreshworksWidget('prefill', 'ticketForm', {
+            description: 'Điện thoại liên hệ:\n\nBạn cần hỗ trợ vấn đề gì?\n',
+            group_id: 51000212421
+        });
+    </script>
 </body>
 
 </html>
